# SynROV

./: Controls.pde  Drone3D.pde  Enviroment.pde  Icon.pde  Images.pde  LICENSE  Logic.pde  Manipulator3D.pde  README.md  Serial.pde  SynROV.html  SynROV.ino  SynROV.pde  UI.pde  Vehicle3D.pde  WebSocket.pde
docs/: SynROV_Operating_Guide.docx  SynROV_Operating_Guide.md
firmware/SynROV_Firmware/: 01_CRC_And_EEPROM.h  02_Initialization.h  03_Motor_Low_Level.h  03_Stepper_Low_Level.h  04_Servo_And_PWM_Output.h  05_Config_Defaults_And_Sync.h  06_Runtime_Commands_And_Diagnostics.h  07_Gps_Serial1.h  07_Serial_Control_And_Telemetry.h  08_Setup_And_Loop.h  09_Safety_Autonomy.h  FirmwareDeclarations.h  SynROV_Firmware.ino
processing/SynROV/: DiagnosticsPanel_Base.pde
processing/SynROV/data/: SynROV_config  drone_config.json  (+3 more)
software/python/: README.md  pyproject.toml  requirements.txt  rodar_synrov_aibot.bat  run_synrov_aibot.bat  synrov_aibot.py
software/python/synrov_aibot/: __init__.py  __main__.py  _legacy.py  actuators.py  auto_torque.py  bridge.py  config.py  core.py  dataset.py  helpers.py  launcher.py  learning.py  main.py  media.py  modern_runtime.py  orchestrator.py  perception.py  policy.py  primitives.py  replay.py  robot_ai.py  runtime.py  safety.py  state.py  trainer.py  ui.py  voice.py
software/python/synrov_aibot/synrov_multimodal_data/: synrov_multimodal_dataset.jsonl  synrov_operation_config.json  synrov_user_config.json
software/python/synrov_aibot/synrov_multimodal_data/models/: synrov_modelo_base_manipulator.joblib
software/web/: SynROV.html
(+10 files in other folders)
