[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synrov-aibot"
version = "1.0.1"
description = "Runtime e interface Python para o SynROV AiBot."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Douglas Santana da Silva" }]
dependencies = [
    "joblib>=1.3",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "Pillow>=10.0.0",
    "scikit-learn>=1.3",
    "soundcard>=0.4.3",
    "sounddevice>=0.5.0",
    "SpeechRecognition>=3.10.0",
    "websocket-client>=1.8.0",
]

[project.optional-dependencies]
audio = ["PyAudio>=0.2.14"]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
synrov-aibot = "synrov_aibot.main:main"

[tool.setuptools]
packages = ["synrov_aibot"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "synrov_aibot/synrov_multimodal_data",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = [
    "E501",
    "B110",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
